Add hidden class and fix HTML structure
Added a hidden class to hide elements and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     80% { transform: translateX(5px); }
   }
   input::placeholder { color: rgba(255,255,255,0.3); }
+  .hidden { display: none !important; }
 
 .hearts-container { position: fixed; inset: 0; pointer-events: none; z-index: 0; overflow: hidden; }
 .heart {
